Comenzando el juego y detectando tarjetas

--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
 html {
      font-size: 62.5%;
-     font-family: 'Tomorrow', sans-serif;
+     font-family: 'MuseoModerno', cursive;
      box-sizing: border-box;
+     letter-spacing:  0.3em;
 }
 
-*, *::before, 
+*, *::before,
 *::after {
      box-sizing: inherit;
      padding: 0;
@@ -12,9 +13,9 @@ html {
 }
 
 body {
-     background: #06beb6;  /* fallback for old browsers */
+     background: #969e9e;  /* fallback for old browsers */
      background: -webkit-linear-gradient(to right, #48b1bf, #06beb6);  /* Chrome 10-25, Safari 5.1-6 */
-     background: linear-gradient(to right, #48b1bf, #06beb6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+     background: linear-gradient(to right, #a6bdc0, #011413); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 img {
@@ -22,7 +23,8 @@ img {
 }
 
 h1 {
-     font-size: 3.5rem;
+     font-size: 5.5rem;
+     color: #e6d8d8;
 }
 
 div.contenedor-general {
